--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.3.2",
     "bootstrap-dark-5": "^1.1.3",
     "cdbreact": "^1.5.18",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
